# event-calendar

./: .cucumberrc.json  .eslintignore  .gitignore  .prettierignore  .prettierrc  .treefmt.toml  AGENTS.md  Makefile  README.md  TODO.md  analysis_report.md  devenv.nix  elm.js  elm.json  eslint.config.js  flake.nix  index.html  package.json  playwright-bdd.config.ts  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tailwind.config.js  test-bdd.js  test-elm.js  tsconfig.json  vite.config.ts  vitest.config.ts
.pocketbase/: auxiliary.db  data.db  types.d.ts
agents/: README-elm-spec.md  architecture.md  development-setup.md  elm-spec-setup.md  playwright-setup.md  project-overview.md  security.md
coverage/: auth.ts.html  coverage-final.json  date-utils.ts.html  geocode.ts.html  index.html
docs/: README.md
elm-spec-core/: elm.json
playwright-report/: index.html
review/: ReviewConfig.elm  elm.json
scripts/: GenerateEmbed.hs  GenerateFeeds.hs  GenerateIcsGeojson.hs  GenerateStatics.hs  GenerateUtils.hi  GenerateUtils.hs  check-db-health.js  check-file-size.sh  check-playwright-compat.sh  export-db.js  generate-embed.js  generate-feeds.js  generate-screenshots.ts  generate-statics.js  generate-utils.js  generate_embed.py  generate_feeds.py  generate_ics_geojson.py  generate_statics.py  generate_utils.py  import-test-db.js
src/: Button.elm  Calendar.elm  CalendarHelpers.elm  CalendarTypes.elm  CalendarView.elm  DateHelpers.elm  DateTimePicker.elm  DateUtils.elm  EventDetail.elm  EventForm.elm  EventList.elm  EventUtils.elm  Events.elm  I18n.elm  (+25 more)
(+171 files in other folders)
